Fixed typo caught by John Lewis.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11856 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -785,7 +785,7 @@ SpsA(1,n) = 0.0;  // ERROR!
 An associative domain type can be defined over any scalar type and is
 given by the following syntax:
 \begin{syntax}
-sparse-domain-type:
+associative-domain-type:
   `domain' ( scalar-type )
 
 scalar-type:
