Refactored and commented implementation of ranges.  Made member a method on ranges that determines whether an element is in a range plus improved its efficiency greatly plus made it work on unbounded ranges.
Updated the spec to include the member function and fixed a minor bug.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11974 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Ranges.tex
+++ b/spec/Ranges.tex
@@ -256,7 +256,7 @@ bounds from the range being sliced.
 
 \begin{example}
 In the following example, \chpl{r} represents the integers from 1 to
-10 inclusive.  Ranges \chpl{r2} and \chpl{r2} are defined using range
+10 inclusive.  Ranges \chpl{r2} and \chpl{r3} are defined using range
 slices and represent the indices from 3 to 10 and the odd integers
 between 1 and 10 respectively.
 \begin{chapel}
@@ -297,3 +297,19 @@ above for 0-based programming.
 \end{rationale}
 
 
+\subsection{Predefined Functions and Methods on Ranges}
+\index{ranges!predefined functions}
+
+\begin{protohead}
+def $range$.member(i: this.eltType): bool
+\end{protohead}
+\begin{protobody}
+Returns whether or not \chpl{i} is in the range.
+\end{protobody}
+
+\begin{protohead}
+def $range$.member(other: range): bool
+\end{protohead}
+\begin{protobody}
+Returns whether or not every element in other is also in this.
+\end{protobody}
