Updated the list of reserved words in the spec, getting it more in sync with the chapel.lex file. A few things are given as reserved words, though seem like they shouldn't need to be -- nil, and compilerError.  I left them on for now.  A few other things are in the lexer, but not in the list (_extern, __primitive) and I left them off for now, figuring the former was an undocumented feature and the latter was for internal use only.
I also reformatted this table in the source and
in the document so that the columns read down
rather than across.  I found this easier to read
as a user, and it should also be easier to maintain
(as I've implemented it with a tabular environment).

I used a sneaky trick of an invisible column in
the table (with white characters) to make the
columns the same size.  I still can't believe that
Latex's tabular environment doesn't support a /kill
line like its tabbing environment does.  Would be
ideal for cases like this.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12052 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -58,20 +58,81 @@ The following are legal identifiers:
 \index{reserved words}
 
 The following keywords are reserved:
+
+\begin{tabular}{lllll}
 \begin{chapel}
-atomic      begin       bool        break       by
-class       cobegin     coforall    complex     config
-const       continue    def         distributed do
-domain      else        enum        false       for
-forall      goto        if          imag        in
-int         inout       let         locale      module
-nil         of          on          ordered     otherwise
-out         param       pragma      range       real
-record      reduce      return      scan        select
-serial      single      sync        then        true
-type        uint        union       use         var
-when        where       while       yield
-\end{chapel}
+atomic
+begin
+break
+by
+class
+cobegin
+coforall
+compilerError
+config
+const
+continue
+\end{chapel} & \begin{chapel}
+def
+distributed
+do
+domain
+else
+enum
+for
+forall
+goto
+if
+in
+\end{chapel} & \begin{chapel}
+index
+inout
+label
+let
+module
+nil
+of
+on          
+ordered
+otherwise
+out
+\end{chapel} & \begin{chapel}
+param
+pragma
+record      
+reduce      
+return      
+scan        
+select
+serial      
+single      
+sparse
+subdomain
+\end{chapel} & \begin{chapel}
+sync        
+then        
+type        
+union       
+use         
+var
+when        
+where       
+while       
+yield
+\end{chapel} \\
+\begin{invisible}
+compilerError
+\end{invisible} & \begin{invisible}
+compilerError
+\end{invisible} & \begin{invisible}
+compilerError
+\end{invisible} & \begin{invisible}
+compilerError
+\end{invisible} & \begin{invisible}
+compilerError
+\end{invisible}
+\end{tabular}
+
 
 \subsubsection{Literals}
 \label{Literals}
