--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -1,4 +1,5 @@
 \documentclass[10pt,twoside,titlepage]{article}
+\usepackage{color}
 \usepackage{times}
 \usepackage{fullpage}
 \usepackage{graphicx}
