Implemented a reshape function that takes an array as a first argument and a domain as a second argument.  Should this be a method instead?
Added a description of reshape to the specification.

Added a test case.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12394 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -1019,3 +1019,14 @@ def $Array$.numElements: this.domain.dim_type
 \begin{protobody}
 Returns the number of elements in the array.
 \end{protobody}
+
+\begin{protohead}
+def reshape(A: $Array$, D: $Domain$): $Array$
+\end{protohead}
+\begin{protobody}
+Returns a copy of the array containing the same values but in the
+shape of the new domain.  The number of indices in the domain must
+equal the number of elements in the array.  The elements of the array
+are copied into the new array using the default iteration orders over
+both arrays.
+\end{protobody}
