Changed syntax of "opaque domain" to "domain(opaque)".
Added support for "index(opaque)" to be the type of an index for an
opaque domain.

Update the spec to note this syntax change though the opaque section
is still lacking.

Added a third test and update the syntax of the previous two.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12471 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -852,16 +852,12 @@ otherwise returns \chpl{false}.
 \index{domains!opaque}
 \index{arrays!opaque}
 
-\begin{status}
-Opaque domains are not yet implemented.
-\end{status}
-
 An opaque domain is a form of associative domain where there is no
 algebra on the types of the indices.  The indices are, in essence,
 opaque.  The opaque domain type is given by the following syntax:
 \begin{syntax}
 opaque-domain:
-  `opaque' `domain'
+  `domain' ( `opaque' )
 \end{syntax}
 
 New index values for opaque domains are explicitly requested via a
